--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
 <resources>
     <string name="app_name">Material Android Sample</string>
     <string name="action_settings">Settings</string>
+
+    <string name="sample_color">View Colors Sample</string>
 </resources>
