--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="sample_accent_color">Select accent colour</string>
     <string name="sample_color_chooser_cancel">Cancel</string>
     <string name="sample_typography">View Typography Sample</string>
+    <string name="sample_components">View Components Sample</string>
 
     <string name="sample_color_title">Colour Sample</string>
     <string name="sample_color_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed elit ut sapien mollis egestas non dapibus turpis. Fusce non erat eu augue pharetra scelerisque nec ac lorem. Aenean vel lobortis lacus, eu blandit urna. Etiam non tristique magna, in iaculis mauris. Vivamus euismod, mi euismod porta feugiat, massa lorem pulvinar tortor, non porttitor enim nisl at mauris.</string>
@@ -26,5 +27,19 @@
     <string name="sample_typography_title">Typography Sample</string>
     <string name="sample_typography_dark">Dark text on light background</string>
     <string name="sample_typography_light">Light text on dark background</string>
+
+    <string name="sample_components_title">Components Sample</string>
+    <string name="sample_components_lists_button">Show List Sample</string>
+    <string name="sample_components_lists_title">Lists</string>
+
+    <string name="sample_lists_title">Lists Sample</string>
+    <string name="sample_lists_single_item">Single-line item</string>
+    <string name="sample_lists_two_item_primary">Two-line item</string>
+    <string name="sample_lists_two_item_secondary">Secondary text</string>
+    <string name="sample_lists_three_item_primary">Three-line item</string>
+    <string name="sample_lists_three_item_secondary">Secondary text</string>
+    <string name="sample_lists_three_item_tertiary">Tertiary text</string>
+    <string name="sample_lists_star_cd">Star</string>
+    <string name="sample_lists_avatar_cd">Avatar</string>
 
 </resources>
