--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -35,10 +35,9 @@
     <string name="sample_lists_title">Lists Sample</string>
     <string name="sample_lists_single_item">Single-line item</string>
     <string name="sample_lists_two_item_primary">Two-line item</string>
-    <string name="sample_lists_two_item_secondary">Secondary text</string>
     <string name="sample_lists_three_item_primary">Three-line item</string>
-    <string name="sample_lists_three_item_secondary">Secondary text</string>
-    <string name="sample_lists_three_item_tertiary">Tertiary text</string>
+    <string name="sample_lists_secondary">Secondary text</string>
+    <string name="sample_lists_tertiary">Tertiary text</string>
     <string name="sample_lists_star_cd">Star</string>
     <string name="sample_lists_avatar_cd">Avatar</string>
 
