--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="sample_components_title">Components Sample</string>
     <string name="sample_components_lists_button">Show List Sample</string>
     <string name="sample_components_grids_button">Show Grid Sample</string>
+    <string name="sample_components_text_fields_button">Show Text Fields Sample</string>
 
     <string name="sample_lists_title">Lists Sample</string>
     <string name="sample_lists_single_item">Single-line item</string>
@@ -47,5 +48,10 @@
     <string name="sample_grids_secondary">Secondary text</string>
     <string name="sample_grids_star_cd">Star</string>
     <string name="sample_grids_image_cd">Image</string>
+
+    <string name="sample_text_fields_title">Text Fields Sample</string>
+    <string name="sample_text_fields_1_hint">To</string>
+    <string name="sample_text_fields_2_hint">Subject</string>
+    <string name="sample_text_fields_3_hint">Message</string>
 
 </resources>
