Added GridItemView. Made grid sample use the GridItemView. (Currently switching text sizes for two-line view isn't working and the text colours aren't working.)

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -50,6 +50,8 @@
     <string name="sample_grids_secondary">Secondary text</string>
     <string name="sample_grids_star_cd">Star</string>
     <string name="sample_grids_image_cd">Image</string>
+    <string name="sample_grids_button_icon_gravity">Icon Gravity</string>
+    <string name="sample_grids_button_text_sizes">Text Sizes</string>
 
     <string name="sample_text_fields_title">Text Fields Sample</string>
     <string name="sample_text_fields_1_hint">To</string>
